[package]
name = "md2notion"
description = "A library to convert gfm markdown to Notion document blocks."
version = "0.1.0"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
readme = "README.md"
license = "Parity-7.0.0"
categories = ["parsing", "text-processing"]
keywords = ["commonmark", "markdown", "notion"]
repository = "https://github.com/ceejbot/md2notion"
homepage = "https://github.com/ceejbot/md2notion"

[dependencies]
markdown = "1.0.0-alpha.18"
notion-client = "1.0.0"
serde_json = "1.0.120"
thiserror = "1.0.61"

[dev-dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
tokio = { version = "1.38.0", features = ["full"] }
